# muse

./: .env.example  .gitignore  CLAUDE.md  README.md  demo.sh  index.html  pyproject.toml
.github/workflows/: ci.yml
MuseApp/: Package.resolved  Package.swift  project.yml
MuseApp/Muse.xcodeproj/: project.pbxproj
MuseApp/Muse.xcodeproj/xcshareddata/xcschemes/: Muse.xcscheme
MuseApp/MuseApp/App/: MuseApp.swift
MuseApp/MuseApp/Engine/: MemoryEngine.swift  MuseEngine.swift  Types.swift
MuseApp/MuseApp/Models/: ChatThread.swift  ClusterEdge.swift  Memory.swift  MemoryCluster.swift  StoredChatSession.swift
MuseApp/MuseApp/Networking/: APIClient.swift
MuseApp/MuseApp/Providers/: AnthropicProvider.swift  MLXProvider.swift  OpenAIProvider.swift  ProviderProtocol.swift
MuseApp/MuseApp/Speech/: SpeechRecognizer.swift
MuseApp/MuseApp/Storage/: KeychainManager.swift
MuseApp/MuseApp/Views/: ChatSessionsView.swift  ChatThreadsView.swift  HistoryView.swift  IdeateView.swift  MemoriesView.swift  SettingsView.swift  SidebarView.swift
docs/: app-store-listing.md  privacy.html
src/muse/: __init__.py  agent.py  api.py  cli.py  config.py  judge.py  orchestrator.py  personas.toml  writer.py
src/muse/engine/: __init__.py  judge.py  orchestrator.py  types.py
src/muse/engine/providers/: __init__.py  anthropic.py  base.py  gemini.py  mlx_local.py  openai_provider.py  qwen.py
src/muse/engine/storage/: __init__.py  base.py  (+1 more)
src/muse/models/: __init__.py  adapters.py
tests/: test_api.py  test_judge.py  test_mlx_provider.py  test_orchestrator.py  test_storage.py
